# Pensive

./: README.md
backend/: .gitignore  README.md  aliases.py  app.py  helpers.py  nohup.out  package-lock.json  package.json  pyproject.toml  tsconfig.json
backend-ts/: .gitignore  package-lock.json  package.json
backend-ts/src/: app.ts  database.ts  scripts.ts
backend-v2/: .gitignore  Cargo.toml  app.py  client.py  parsing.py  pyproject.toml  reducers.py  store.py
backend-v2-rust/: .gitignore  Cargo.toml
backend-v2-rust/src/: main.rs  store.rs
backend-v2/src/: helpers.rs  main.rs  store.rs
backend/models/: archive.py  chunk.py  context.py  pensive.py  store.py  timestamp.py  trait.py
backend/parsing/: .gitignore  file.py  folders.py  line.py
backend/pensive_backend/: app.py  parsing.py  reducers.py
backend/src/: app.ts  database.ts
backend/traits/: flag.py  image.py  reference.py  text.py
backend_v2/: .gitignore  README.md
backend_v2/pensive_backend/: app.py  client.py  helpers.py  parsing.py  store.py
common/: .gitignore  package-lock.json  package.json  tsconfig.json
common/src/: client.ts  helpers.ts  index.ts  main.ts  reducers.ts  store.ts
frontend/: .gitignore  README.md  forge.config.ts  index.ts  package-lock.json  package.json  renderer.ts  tsconfig.json  webpack.main.config.ts  webpack.renderer.config.ts
frontend/src/: constants.ts  constants.tsx  index.html  llms.ts  llms.tsx
mobile/: app.json  package-lock.json  package.json  tsconfig.json
mobile/sqlite-demo/: App.jsx  app.json  package.json
mobile/src/: App.tsx
(+101 files in other folders)
